--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,33 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
 	
 </head>
 
 <body>
+    <div class="container">
 	<h1>My HCI Friends</h1>
 
+
+        <div class="friends">
+        <!--want to access all the friends, should it be each friends   -->
+        {{#each friends}}
+            <p><img src={{imageURL}} class="img-rounded" class="img-thumbnail"></p>
+            <p>{{name}}</p>
+            <p>{{description}}</p>
+        {{/each}}
+        </div>
+
+
+    <img src="http://lorempixel.com/500/500/people">
+    <h3>Fake Friend</h3>
+    <p>All my friends are imaginary</p>
+
 	<form id="addFriendForm" role="form" method="get" action="/add">
+
 		<h3>Add a friend</h3>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
@@ -22,5 +42,12 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+
+    <script src="js/jquery-1.11.0.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/hci-friends.js"></script>
+    <!--</div>-->
+
 </body>
+
 </html>
