--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,27 +7,25 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.css" rel="stylesheet">
 	<link href="css/hci-friends.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 </head>
 
 <body>
     <div class="container">
 	<h1>My HCI Friends</h1>
-
-
-        <div class="friends">
         <!--want to access all the friends, should it be each friends   -->
-        {{#each friends}}
-            <p><img src={{imageURL}} class="img-rounded" class="img-thumbnail"></p>
-            <p>{{name}}</p>
-            <p>{{description}}</p>
-        {{/each}}
-        </div>
+            {{#each friends}}
+               <div class = "myFriends">
+                <p><img src={{imageURL}} class="img-rounded" class="img-thumbnail"></p>
+                   <p><a href="#" class="changeName">{{name}}</a></p>
+                <p>{{description}}</p>
+               </div>
+            {{/each}}
 
-
-    <img src="http://lorempixel.com/500/500/people">
-    <h3>Fake Friend</h3>
-    <p>All my friends are imaginary</p>
+        <img src="http://lorempixel.com/500/500/people">
+        <h3>Fake Friend</h3>
+        <p>All my friends are imaginary</p>
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 
@@ -46,8 +44,7 @@
     <script src="js/jquery-1.11.0.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/hci-friends.js"></script>
-    <!--</div>-->
+    </div>
 
 </body>
-
 </html>
